<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/witness_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@+id/witness_greeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/witness_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_2"
            android:gravity="center"
            android:text="@string/welcome_to_the_witness"
            android:textAppearance="?textAppearanceSubtitle1"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/witness_greeting_summary"
            app:layout_constraintTop_toBottomOf="@+id/witness_logo" />

        <TextView
            android:id="@+id/witness_greeting_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_0_5"
            android:gravity="center"
            android:text="@string/sign_in_with_google_to_get_started"
            android:textAppearance="?textAppearanceCaption"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
            app:layout_constraintTop_toBottomOf="@+id/witness_greeting" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shapeAppearance="?shapeAppearanceRound"
            app:backgroundTint="?colorSecondary"
            android:layout_marginTop="@dimen/grid_2"
            android:textColor="?colorOnSecondary"
            android:text="@string/sign_in"
            android:textAppearance="?textAppearanceButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/witness_greeting_summary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>